# EzCompiler

./: Dockerfile  README.md  fly.toml
backend/: app.py  pyproject.toml
backend/modules/: routes.py
compiler/: .gitignore  main.py  pyproject.toml
compiler/src/: assembler.py  assembly_generator.py  ast.py  ir.py  ir_generator.py  parser.py  sym_table.py  tokenizer.py  type.py  type_checker.py
compiler/tests/: test_ast_utils.py  test_compiler.py  test_parser.py  test_tokenizer.py  tokenizer_test.py
frontend/: .prettierrc.json  index.html  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/assets/: base.css  main.css
frontend/src/components/: AsmCode.vue  AstInterpreter.vue  AstTree.vue  CodeEditor.vue  CodeExamples.vue  CodeResult.vue  ConsoleFace.vue  HeaderRouter.vue  InfoBox.vue  IntermediateRepresentation.vue  LanguageSpecModal.vue  NoResult.vue  Tokenizer.vue  TokenizerList.vue  TooltipItem.vue
frontend/src/router/: index.js
frontend/src/services/: CompilerService.js
frontend/src/stores/: compilerStore.js
frontend/src/utils/: SymTab.js
frontend/src/views/: AsmView.vue  AstView.vue  InterpreterView.vue  IrView.vue  ParserView.vue  ResultView.vue  TokenizerView.vue
