[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Le36 <48809753+Le36@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.1"
flask-cors = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
